# ai-slide-generator

./: .gitignore  README.md  index.html  main.py  pyproject.toml  requirements.txt  run_ui.bat  run_ui.sh  streamlit_ui.py
.github/workflows/: pages.yml
config/: __init__.py  settings.py  template_manager.py
docs/: app.html  demo-google-classic.html  demo-google-dark.html  demo-google-minimal.html  index.html  test-classic-live.html  test-dark-live.html  test-minimal-live.html
examples/: sample_markdown.md  sample_presentation.txt
output/: site_audit_report.txt
src/slide_generator/: __init__.py  auth.py  cli.py  enhanced_html_generator.py  enhanced_patterns.py  google_slides_generator.py  google_style_themes.py  html_slides_generator.py  text_parser.py
templates/google_slides/: modern_template.json
templates/html_slides/: custom_theme.css
tests/: __init__.py  site_audit.py  test_html_generator.py  test_text_parser.py
